@@ -1,4 +1,4 @@
-syslog-ng
+rsyslog
 networking
 cron
 bastion
